--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 :root {
-	--main-bg-color: #ffffff;
+	--main-bg-color: hwb(45 50% 20%);
 	--logo-yellow-color: #cc9a01;
 	--logo-dragon-color: #231f20;
 	--logo-border-color: #010101;
@@ -10,6 +10,8 @@
 	--green-button-color: #5eff5e;
 	--green-button-color-hover: #8eff8e;
 	--table-border-color: #444444;
+
+	--nav-height: 3em;
 }
 
 html {
@@ -24,12 +26,47 @@ body {
 	width: 100%
 }
 
-.nav {
-	display: flex;
+nav {
+	display: grid;
+	grid-template-columns: var(--nav-height) 1fr 1fr 1fr 1fr 35%;
+	grid-template-rows: var(--nav-height);
 	width: 100%;
-	height: 3em;
+	height: var(--nav-height);
 	background-color: var(--logo-yellow-color);
+	border-bottom: 2px solid #000000;
 }
+
+.schoolLogo {
+	width: calc(var(--nav-height));
+	height: calc(var(--nav-height));
+}
+
+.navButton {
+	background-color: var(--logo-yellow-color);
+	align-self: center;
+	height: 100%;
+	border-radius: 0;
+	border-color: var(--logo-border-color);
+	font-size: 24px;
+	border-top-width: 0px;
+	border-left-width: 0px;
+	border-bottom-width: 0px;
+	display: flex;
+	flex: 1 1 0px;
+}
+
+#homeButton {
+	border-left-width: 2px;
+}
+
+.navButton:hover {
+	background-color: var(--hover-yellow-color);
+}
+
+
+
+
+
 
 
 input {
@@ -70,7 +107,15 @@ legend {
 	max-height: 1.1em;
 	align-self: center;
 	margin-left: 5px;
+	border: 1px solid var(--logo-border-color);
+	background-color: var(--main-bg-color);
 }
+
+.searchInput:hover, .searchInput:focus {
+	background-color: #cc9a01;
+}
+
+
 
 .output {
 	margin: 10px;
@@ -151,23 +196,5 @@ caption {
 	padding: 10px;
 }
 
-.navButton {
-	background-color: var(--logo-yellow-color);
-	align-self: center;
-	height: 100%;
-	border-radius: 0;
-	border-color: var(--logo-border-color);
-	font-size: 24px;
-	border-top-width: 0px;
-	border-left-width: 0px;
-	display: flex;
-	flex: 1 1 0px;
-}
 
-#homeButton {
-	border-left-width: 2px;
-}
 
-.navButton:hover {
-	background-color: var(--hover-yellow-color);
-}
